--- a/app.json
+++ b/app.json
@@ -29,9 +29,7 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "imageWidth": 1000
         }
       ]
     ],
