--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ expo-env.d.ts
 *.key
 *.mobileprovision
 
+
 # Metro
 .metro-health-check*
 
@@ -37,3 +38,5 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+# exluded apk build
+*.apk
