--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "build-apk":"eas build -p android --profile preview --local"
+    "build-apk":"eas build -p android --profile preview --local",
+    "build-aab":"eas build -p android --profile production --local"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
